[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "huggingface-hub>=0.34.4",
    "polars>=1.32.3",
    "pydantic-ai>=0.7.2",
    "rich>=14.1.0",
    "typer>=0.16.0",
]
